--- a/TrackerUI/TrackerUI.csproj
+++ b/TrackerUI/TrackerUI.csproj
@@ -70,6 +70,11 @@
     <Compile Include="TournamentDashbordForm.Designer.cs">
       <DependentUpon>TournamentDashbordForm.cs</DependentUpon>
     </Compile>
+    <Compile Include="TournamentsDataSet.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>TournamentsDataSet.xsd</DependentUpon>
+    </Compile>
     <Compile Include="TournamentViewerForm.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -111,6 +116,17 @@
       <DependentUpon>Settings.settings</DependentUpon>
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
     </Compile>
+    <None Include="TournamentsDataSet.xsc">
+      <DependentUpon>TournamentsDataSet.xsd</DependentUpon>
+    </None>
+    <None Include="TournamentsDataSet.xsd">
+      <Generator>MSDataSetGenerator</Generator>
+      <LastGenOutput>TournamentsDataSet.Designer.cs</LastGenOutput>
+      <SubType>Designer</SubType>
+    </None>
+    <None Include="TournamentsDataSet.xss">
+      <DependentUpon>TournamentsDataSet.xsd</DependentUpon>
+    </None>
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
