--- a/TrackerUI/App.config
+++ b/TrackerUI/App.config
@@ -3,7 +3,7 @@
     <configSections>
     </configSections>
     <connectionStrings>
-        <add name="TrackerUI.Properties.Settings.TournamentsConnectionString"
+        <add name="Tournaments"
             connectionString="Data Source=.\SQLEXPRESS;Initial Catalog=Tournaments;Integrated Security=True"
             providerName="System.Data.SqlClient" />
     </connectionStrings>
