Added saving to file. Added file helpers methods Removed old namespaces

--- a/TrackerLib/TrackerLib.csproj
+++ b/TrackerLib/TrackerLib.csproj
@@ -47,6 +47,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Connections\SQLConnector.cs" />
+    <Compile Include="Connections\TextConnectorProcessor.cs" />
     <Compile Include="Connections\TextConntector.cs" />
     <Compile Include="Enums.cs" />
     <Compile Include="GlobalConfig.cs" />
