--- a/TrackerUI/App.config
+++ b/TrackerUI/App.config
@@ -2,6 +2,9 @@
 <configuration>
     <configSections>
     </configSections>
+  <appSettings>
+    <add key="FilePath" value="E:\FileStore"/>
+  </appSettings>
     <connectionStrings>
         <add name="Tournaments"
             connectionString="Data Source=.\SQLEXPRESS;Initial Catalog=Tournaments;Integrated Security=True"
