Some cosmetic refactor

--- a/TrackerLib/TrackerLib.csproj
+++ b/TrackerLib/TrackerLib.csproj
@@ -46,7 +46,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Connections\SQLConnector.cs" />
+    <Compile Include="Connections\SqlConnector.cs" />
     <Compile Include="Connections\TextConnectorProcessor.cs" />
     <Compile Include="Connections\TextConntector.cs" />
     <Compile Include="Enums.cs" />
