--- a/TrackerLib/TrackerLib.csproj
+++ b/TrackerLib/TrackerLib.csproj
@@ -47,6 +47,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Connections\SqlConnector.cs" />
+    <Compile Include="Connections\SqlConnectorProcessor.cs" />
     <Compile Include="Connections\TextConnectorProcessor.cs" />
     <Compile Include="Connections\TextConntector.cs" />
     <Compile Include="Enums.cs" />
