--- a/TrackerUI/TrackerUI.csproj
+++ b/TrackerUI/TrackerUI.csproj
@@ -68,8 +68,9 @@
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="Helper Methods\Helper.cs" />
-    <Compile Include="IPrizeRequester.cs" />
-    <Compile Include="ITeamRequester.cs" />
+    <Compile Include="FormInterfaces\IPrizeRequester.cs" />
+    <Compile Include="FormInterfaces\ITeamRequester.cs" />
+    <Compile Include="FormInterfaces\ITournamentRequester.cs" />
     <Compile Include="TournamentDashbordForm.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -143,5 +144,6 @@
       <Name>TrackerLib</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
