Implemented logic for Tournament dashboard and viewer. Createed form for tournament breacket viewer

--- a/TrackerUI/App.config
+++ b/TrackerUI/App.config
@@ -4,6 +4,7 @@
     </configSections>
   <appSettings>
     <add key="FilePath" value="E:\FileStore"/>
+    <add key="winnerDetermination" value="1"/>
   </appSettings>
     <connectionStrings>
         <add name="Tournaments"
